injection of logs coming from docker compose
